--- a/server/views/users/edit.pug
+++ b/server/views/users/edit.pug
@@ -1,7 +1,7 @@
 extends ../layouts/application.pug
 
 block header
-  = t('views.users.new.signUp')
+  = t('views.users.edit.edit')
 
 block content
   +formFor()(action=route('users') method='post')
@@ -9,4 +9,5 @@ block content
     +input(user, 'lastName', errors)(type="text")
     +input(user, 'email', errors)(type="text")
     +input(user, 'password', errors)(type="password")
+    input(name="_method", type="hidden", value="patch")
     +submit(user)(value=t('views.users.new.submit'))
