--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -1,22 +1,27 @@
 extends ../layouts/application.pug
 
 block content
-  table.table.table-striped
-    thead
-      tr
-        th= t('views.users.id')
-        th= t('views.users.email')
-        th= t('views.users.createdAt')
-        th= t('views.users.actions')
-    tbody
-      each user in users
-        tr
-          td= user.id
-          td= user.email
-          td= formatDate(user.createdAt)
-          td
-            .d-flex.flex-wrap
-              a.btn.btn-primary.me-1(href=`/users/${user.id}/edit`)= t('views.users.act.edit')
-              form(action=`/users/${user.id}`, method="post")
-                input(name="_method", type="hidden", value="delete")
-                input.btn.btn-danger(type="submit" value=t('views.users.act.delete'))
+  div.container.wrapper.flex-grow-1
+      h1.display-4.fw-bold.mt-4 Пользователи
+      div.table-responsive
+        table.table.table-borderless.table-striped.mt-5.bg-white
+          thead
+            tr
+              th= t('views.users.id')
+              th= t('views.users.fullName')
+              th= t('views.users.email')
+              th= t('views.users.createdAt')
+              th= t('views.users.actions')
+            tbody
+              each user in users
+                tr
+                  td= user.id
+                  td= user.firstName + ' ' + user.lastName
+                  td= user.email
+                  td= formatDate(user.createdAt)
+                  td
+                    .d-flex.flex-wrap
+                      a.btn.btn-primary.me-1(href=`/users/${user.id}/edit`)= t('views.users.act.edit')
+                      form(action=`/users/${user.id}`, method="post")
+                        input(name="_method", type="hidden", value="delete")
+                        input.btn.btn-danger(type="submit" value=t('views.users.act.delete'))
