--- a/server/views/mixins/forms.pug
+++ b/server/views/mixins/forms.pug
@@ -15,10 +15,11 @@ mixin input(entity, propertyName, errors = {})
       name=getInputName(propertyName)
       class=classLine
       value=_.get(entity, propertyName, '')
+      placeholder= t(`views.forms.${propertyName}`)
     )&attributes(attributes)
     label(
       for= inputId
-    )= propertyName
+    )= t(`views.forms.${propertyName}`)
     if !_.isEmpty(propertyErrors)
       .invalid-feedback= propertyErrors.map(({ message }) => message).join('. ')
 
