--- a/server/views/users/edit.pug
+++ b/server/views/users/edit.pug
@@ -4,7 +4,7 @@ block header
   = t('views.users.edit.edit')
 
 block content
-  +formFor()(action=route('users') method='post')
+  +formFor()(action=`/users/${user.id}` method='post')
     +input(user, 'firstName', errors)(type="text")
     +input(user, 'lastName', errors)(type="text")
     +input(user, 'email', errors)(type="text")
