--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -19,6 +19,8 @@ html(lang="ru")
               a.nav-link(href=route('users'))= t('layouts.application.users')
             if isAuthenticated()
               li.nav-item
+                a.nav-link(href=route('statuses'))= t('layouts.application.statuses')
+              li.nav-item
                 +buttonTo(route('session'), 'delete')(class="btn nav-link" value=t('layouts.application.signOut'))
             else
               li.nav-item
