--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -2,7 +2,7 @@ extends ../layouts/application.pug
 
 block content
   div.container.wrapper.flex-grow-1
-      h1.display-4.fw-bold.mt-4 Пользователи
+      h1.display-4.fw-bold.mt-4= t('views.users.title')
       div.table-responsive
         table.table.table-borderless.table-striped.mt-5.bg-white
           thead
