--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -4,23 +4,11 @@ block header
   = t('views.tasks.new.title')
 
 block content
-    +formFor()(action=route('tasks') method='post')
-        +input(status, 'name', errors)(type="text")
-        .mb-3
-          label(for="data_description")= t('views.forms.description')
-          textarea.form-control(id="data_description", name="data[description]", rows="3")
-        .mb-3
-          label(for="data_statusId")= t('views.forms.status')
-          select.form-control(id="data_statusId", name="data[statusId]")
-            each status in statuses
-              option
-                |= status.name
-        .mb-3
-          label(for="data_executorId")= t('views.forms.executor')
-          select.form-control(id="data_executorId", name="data[executorId]")
-            each user in users
-              option
-                |= user.name
-        +submit(status)(value=t('views.tasks.new.submit'))
+  +formFor()(action=route('tasks') method='post')
+      +input(task, 'name', errors)(type="text")
+      +textarea(task, 'description', errors)
+      +select(statuses, 'statusId', ['name'], errors)
+      +select(users, 'executorId', ['firstName', 'lastName'], errors)
+      +submit(status)(value=t('views.tasks.new.submit'))
 
   
