--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -9,6 +9,6 @@ block content
       +textarea(task, 'description', errors)
       +select(statuses, 'statusId', ['name'], errors)
       +select(users, 'executorId', ['firstName', 'lastName'], errors)
-      +submit(status)(value=t('views.tasks.new.submit'))
+      +submit(task)(value=t('views.tasks.new.submit'))
 
   
