--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -7,8 +7,6 @@ block content
   +formFor()(action=route('tasks') method='post')
       +input(task, 'name', errors)(type="text")
       +textarea(task, 'description', errors)
-      +select(statuses, 'statusId', ['name'], errors)
-      +select(users, 'executorId', ['firstName', 'lastName'], errors)
+      +select(statuses, 'statusId', ['name'], _.get(task, 'statusId'), errors)
+      +select(users, 'executorId', ['firstName', 'lastName'], _.get(task, 'executorId'), errors)
       +submit(task)(value=t('views.tasks.new.submit'))
-
-  
