--- a/server/views/tasks/edit.pug
+++ b/server/views/tasks/edit.pug
@@ -4,11 +4,12 @@ block header
   = t('views.tasks.edit.title')
 
 block content
-  +formFor()(action=route('tasks') method='post')
+  +formFor()(action=`/tasks/${task.id}` method='post')
       +input(task, 'name', errors)(type="text")
       +textarea(task, 'description', errors)
-      +select(statuses, 'statusId', ['name'], errors)
-      +select(users, 'executorId', ['firstName', 'lastName'], errors)
+      +select(statuses, 'statusId', ['name'], _.get(task, 'statusId'), errors)
+      +select(users, 'executorId', ['firstName', 'lastName'], _.get(task, 'executorId'), errors)
+      input(name="_method", type="hidden", value="patch")
       +submit(task)(value=t('views.tasks.edit.submit'))
 
   
