--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -21,6 +21,8 @@ html(lang="ru")
               li.nav-item
                 a.nav-link(href=route('statuses'))= t('layouts.application.statuses')
               li.nav-item
+                a.nav-link(href=route('labels'))= t('layouts.application.labels')
+              li.nav-item
                 a.nav-link(href=route('tasks'))= t('layouts.application.tasks')
               li.nav-item
                 +buttonTo(route('session'), 'delete')(class="btn nav-link" value=t('layouts.application.signOut'))
