--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -7,7 +7,7 @@ block content
   +formFor()(action=route('tasks') method='post')
       +input(task, 'name', errors)(type="text")
       +textarea(task, 'description', errors)
-      +select(statuses, 'statusId', ['name'], _.get(task, 'statusId'), errors)
-      +select(users, 'executorId', ['firstName', 'lastName'], _.get(task, 'executorId'), errors)
-      +select(labels, 'labels', ['name'], _.get(task, 'labelIds'), errors)(multiple="multiple")
+      +select(statuses, 'statusId', ['name'], [_.get(task, 'statusId')], errors)
+      +select(users, 'executorId', ['firstName', 'lastName'], [_.get(task, 'executorId')], errors)
+      +select(labels, 'labels', ['name'], [_.get(task, 'labels')].flat(), errors)(multiple="multiple")
       +submit(task)(value=t('views.tasks.new.submit'))
