--- a/server/views/tasks/edit.pug
+++ b/server/views/tasks/edit.pug
@@ -7,9 +7,9 @@ block content
   +formFor()(action=`/tasks/${task.id}` method='post')
       +input(task, 'name', errors)(type="text")
       +textarea(task, 'description', errors)
-      +select(statuses, 'statusId', ['name'], _.get(task, 'statusId'), errors)
-      +select(users, 'executorId', ['firstName', 'lastName'], _.get(task, 'executorId'), errors)
-      +select(labels, 'labels', ['name'], [_.get(task, 'labels')].flat(), errors)(multiple="multiple")
+      +select(statuses, 'statusId', ['name'], [_.get(task, 'statusId')], errors)
+      +select(users, 'executorId', ['firstName', 'lastName'], [_.get(task, 'executorId')], errors)
+      +select(labels, 'labels', ['name'], _.get(task, 'labels').flat(), errors)(multiple="multiple")
       input(name="_method", type="hidden", value="patch")
       +submit(task)(value=t('views.tasks.edit.submit'))
 
