--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -1,33 +1,45 @@
 extends ../layouts/application.pug
 
+block header
+  = t('views.tasks.title')
+
 block content
-  .container.wrapper.flex-grow-1
-    h1.display-4.fw-bold.mt-4= t('views.tasks.title')
-    a.btn.btn-primary(href='/tasks/new')= t('views.tasks.createTaskButton')
-    .table-responsive
-      table.table.table-borderless.table-striped.mt-5.bg-white
-        thead
-        tr
-          th.py-3= t('views.tasks.id')
-          th.py-3= t('views.tasks.name')
-          th.py-3= t('views.tasks.status')
-          th.py-3= t('views.tasks.creator')
-          th.py-3= t('views.tasks.executor')
-          th.py-3= t('views.tasks.createdAt')
-          th
-        tbody
-          each task in tasks
-            tr
-              td= task.id
-              td
-                a(href= `/tasks/${task.id}`)= task.name
-              td= task.status.name
-              td= [task.creator.firstName, task.creator.firstName].join(' ')
-              td= [task.executor.firstName, task.executor.firstName].join(' ')
-              td= formatDate(task.createdAt)
-              td
-                .d-flex.flex-wrap
-                  a.btn.btn-primary.me-1(href=`/tasks/${task.id}/edit`)= t('views.tasks.act.edit')
-                  form(action=`/tasks/${task.id}`, method="post")
-                    input(name="_method", type="hidden", value="delete")
-                    input.btn.btn-danger(type="submit" value=t('views.tasks.act.delete'))
+  a.btn.btn-primary.mb-5(href='/tasks/new')= t('views.tasks.createTaskButton')
+  .card.shadow-sm
+    .card-body.p-4
+      +formFor()(action="/tasks", method="get")
+        .row
+          +filterSelect(statuses, 'status', ['name'], _.get(filterObject, 'status'))
+          +filterSelect(users, 'executor', ['firstName', 'lastName'], _.get(filterObject, 'executor'))
+          +filterSelect(labels, 'label', ['name'], _.get(filterObject, 'label'))
+        .mb-3.form-check
+          input.form-check-input#data_isCreatorUser(type="checkbox" name="isCreatorUser")
+          label.form-check-label(for="data_isCreatorUser") Только мои задачи
+        input.btn.btn-primary(type="submit" value="Показать")
+  .table-responsive
+    table.table.table-borderless.table-striped.mt-5.bg-white
+      thead
+      tr
+        th.py-3= t('views.tasks.id')
+        th.py-3= t('views.tasks.name')
+        th.py-3= t('views.tasks.status')
+        th.py-3= t('views.tasks.creator')
+        th.py-3= t('views.tasks.executor')
+        th.py-3= t('views.tasks.createdAt')
+        th
+      tbody
+        each task in tasks
+          tr
+            td= task.id
+            td
+              a(href= `/tasks/${task.id}`)= task.name
+            td= task.status.name
+            td= [task.creator.firstName, task.creator.firstName].join(' ')
+            td= [task.executor.firstName, task.executor.firstName].join(' ')
+            td= formatDate(task.createdAt)
+            td
+              .d-flex.flex-wrap
+                a.btn.btn-primary.me-1(href=`/tasks/${task.id}/edit`)= t('views.tasks.act.edit')
+                form(action=`/tasks/${task.id}`, method="post")
+                  input(name="_method", type="hidden", value="delete")
+                  input.btn.btn-danger(type="submit" value=t('views.tasks.act.delete'))
