--- a/server/views/tasks/view.pug
+++ b/server/views/tasks/view.pug
@@ -9,13 +9,15 @@ block content
       .lead.fw-normal.mb-4= task.description
     .col-12.col-md-4.border-start.px-3.order-1.order-md-2.mb-3.mb-md-0
       .mb-2
-        span.me-1.badge.bg-danger.text-white= task.statusName
+        span.me-1.badge.bg-danger.text-white= task.status.name
+        for label in task.labels
+          span.me-1.badge.bg-info.text-white= label.name
       .d-flex.flex-wrap.mb-3
         span.text-muted.me-2= t('views.tasks.view.creator')
-        span= task.creatorName
+        span= `${task.creator.firstName} ${task.creator.lastName}`
       .d-flex.flex-wrap.mb-3
         span.text-muted.me-2= t('views.tasks.view.executor')
-        span= task.executorName
+        span= `${_.get(task, 'executor.firstName', '')} ${_.get(task, 'executor.lastName', '')}`
       .d-flex.flex-wrap.mb-3
         span.text-muted.me-2= t('views.tasks.view.createdAt')
         span= formatDate(task.createdAt)
